# raylib-cmake-vscode-setup

./: .gitignore  CMakeLists.txt  README.md  core_basic_window.c
src/: main.cpp  platformer.cpp  platformer.h
